--- a/WebLivroAUC.html
+++ b/WebLivroAUC.html
@@ -270,4 +270,28 @@ Os amigos tentaram contatá-la, mas Elise se trancou em casa, envolta em um mant
     })();
   </script>
 </body>
+<script>
+  // Bloqueia seleção de texto
+  document.addEventListener('selectstart', e => e.preventDefault());
+
+  // Bloqueia clique com botão direito
+  document.addEventListener('contextmenu', e => e.preventDefault());
+
+  // Bloqueia atalhos de cópia
+  document.addEventListener('keydown', e => {
+    if ((e.ctrlKey || e.metaKey) && ['c', 'x', 'u', 's', 'p'].includes(e.key.toLowerCase())) {
+      e.preventDefault();
+    }
+  });
+</script>
+
+<style>
+  /* Remove seleção de texto */
+  body, * {
+    user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+  }
+</style>
+
 </html>
