--- a/index.html
+++ b/index.html
@@ -302,59 +302,62 @@
           </div>
         </div>
 
-        <!-- WebLivro -->
-        <div class="obra" data-tags="WebLivro">
-          <div class="bg-white rounded-3xl shadow-lg flex flex-col p-5 h-full hover:shadow-xl transition-all group relative">
-            <div class="absolute top-3 left-3 z-10 bg-indigo-100 text-indigo-700 px-3 py-1 text-xs font-bold rounded-full shadow-sm">🌐 WebLivro</div>
-            <img src="IdW.jpg" class="w-full aspect-[2/3] object-cover rounded-2xl mb-4 transform group-hover:scale-105 transition-all" alt="O Incidente de Willowbrook capa"/>
-            <h3 class="text-lg sm:text-xl font-bold text-center mb-1">O incidente de Willowbrook</h3>
-            <p class="text-base mt-2 text-center text-gray-800"><strong class="text-indigo-600 text-xl font-bold">R$ 7,50</strong></p>
-            <div class="mt-auto pt-4">
-              <button 
-                onclick="abrirDetalhes({
-                  nome: 'O Incidente de Willowbrook',
-                  descricao: 'Em um Reino Unido envolto em mistérios e segredos, Emily Holwes, uma investigadora surda, recebe uma carta de um antigo amigo propondo um trabalho intrigante: investigar o misterioso vilarejo de Willowbrook, onde todos os habitantes morreram repentinamente. Determinada a desvendar o que aconteceu, Emily embarca em uma jornada que a leva por caminhos obscuros e inesperados...',
-                  preco: 7.5,
-                  imagem: 'IdW.jpg',
-                  youtube: null,
-                  tipo: 'weblivro',
-                  hotmartLink: 'https://hotmart.com/pt-br/marketplace/produtos/o-incidente-de-willowbrook/I101263325N'
-                })"
-                class="w-full bg-purple-600 text-white py-2 rounded-full hover:bg-purple-700 transition mt-4">
-                Ver Detalhes
-              </button>
-            </div>
-          </div>
-        </div>
+   <!-- WebLivro: O Incidente de Willowbrook -->
+<div class="obra" data-tags="WebLivro">
+  <div class="bg-white rounded-3xl shadow-lg flex flex-col p-5 h-full hover:shadow-xl transition-all group relative">
+    <div class="absolute top-3 left-3 z-10 bg-indigo-100 text-indigo-700 px-3 py-1 text-xs font-bold rounded-full shadow-sm">🌐 WebLivro</div>
+    <img src="IdW.jpg" class="w-full aspect-[2/3] object-cover rounded-2xl mb-4 transform group-hover:scale-105 transition-all" alt="O Incidente de Willowbrook capa"/>
+    <h3 class="text-lg sm:text-xl font-bold text-center mb-1">O Incidente de Willowbrook</h3>
+    <p class="text-base mt-2 text-center text-gray-800">
+      <strong class="text-indigo-600 text-xl font-bold">R$ 7,50</strong>
+    </p>
+    <div class="mt-auto pt-4">
+      <button 
+        onclick="abrirDetalhes({
+          nome: 'O Incidente de Willowbrook',
+          descricao: 'Em um Reino Unido envolto em mistérios e segredos...',
+          preco: 7.5,
+          imagem: 'IdW.jpg',
+          youtube: null,
+          tipo: 'weblivro',
+          accessCode: 'ID10-W7BK-EMHW',
+          accessUrl: 'WebLivroIdW.html'
+        })"
+        class="w-full bg-purple-600 text-white py-2 rounded-full hover:bg-purple-700 transition mt-4">
+        Ver Detalhes
+      </button>
+    </div>
+  </div>
+</div>
 
-        <!-- WebLivro 2 -->
-        <div class="obra" data-tags="WebLivro">
-          <div class="bg-white rounded-3xl shadow-lg flex flex-col p-5 h-full hover:shadow-xl transition-all group relative">
-            <div class="absolute top-3 left-3 z-10 bg-indigo-100 text-indigo-700 px-3 py-1 text-xs font-bold rounded-full shadow-sm">🌐 WebLivro</div>
-            <img src="LdC1.png" class="w-full aspect-[2/3] object-cover rounded-2xl mb-4 transform group-hover:scale-105 transition-all" alt="A Lenda do Caos (Web) capa"/>
-            <h3 class="text-lg sm:text-xl font-bold text-center mb-1">A Lenda do Caos: Tríplice Caótica (Versão Web)</h3>
-            <p class="text-base sm:text-lg mt-2 text-center">
-              <del class="text-red-500 text-base mr-2">R$ 25,90</del>
-              <strong class="text-green-600 text-xl font-bold">R$ 19,90</strong>
-            </p>
-            <div class="mt-auto pt-4">
-              <button 
-                onclick="abrirDetalhes({
-                  nome: 'A Lenda do Caos: Tríplice Caótica (Versão Web)',
-                  descricao: 'E se cada história que já foi contada existisse de verdade, em um universo próprio, moldado pela mente de quem a criou?...',
-                  preco: 24.9,
-                  imagem: 'LdC1.png',
-                  youtube: null,
-                  tipo: 'weblivro',
-                  hotmartLink: 'https://pay.hotmart.com/SEU_HOTLINK_LDC_WEB'
-                })"
-                class="w-full bg-purple-600 text-white py-2 rounded-full hover:bg-purple-700 transition mt-4">
-                Ver Detalhes
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
+<!-- WebLivro 2: A Última Colheita -->
+<div class="obra" data-tags="WebLivro">
+  <div class="bg-white rounded-3xl shadow-lg flex flex-col p-5 h-full hover:shadow-xl transition-all group relative">
+    <div class="absolute top-3 left-3 z-10 bg-indigo-100 text-indigo-700 px-3 py-1 text-xs font-bold rounded-full shadow-sm">🌐 WebLivro</div>
+    <img src="AUCcapa.png" class="w-full aspect-[2/3] object-cover rounded-2xl mb-4 transform group-hover:scale-105 transition-all" alt="A Última Colheita capa"/>
+    <h3 class="text-lg sm:text-xl font-bold text-center mb-1">A Última Colheita</h3>
+    <p class="text-base mt-2 text-center text-gray-800">
+      <strong class="text-indigo-600 text-xl font-bold">R$ 2,50</strong>
+    </p>
+    <div class="mt-auto pt-4">
+      <button 
+        onclick="abrirDetalhes({
+          nome: 'A Última Colheita',
+          descricao: 'E se cada história que já foi contada existisse de verdade...',
+          preco: 2.5,
+          imagem: 'AUCcapa.png',
+          youtube: null,
+          tipo: 'weblivro',
+          accessCode: 'AU20-C7TA-ELSA',   /* mude se quiser */
+          accessUrl: 'WebLivroAUC.html'    /* página desse WebLivro */
+        })"
+        class="w-full bg-purple-600 text-white py-2 rounded-full hover:bg-purple-700 transition mt-4">
+        Ver Detalhes
+      </button>
+    </div>
+  </div>
+</div>
+
 
       <button id="nextObras" class="carousel-btn carousel-btn-right hidden sm:block" aria-label="Próximo">&gt;</button>
     </div>
@@ -634,41 +637,46 @@ function abrirDetalhes(detalhes) {
   btnsEl.classList.add("flex", "flex-col", "gap-3");
 
   // ===== Bloco de ACESSO (sempre acima do carrinho p/ WebLivro) =====
-  if (tipo === "weblivro") {
-    const info = document.createElement("p");
-    info.className = "text-sm text-gray-600";
-    info.textContent = "Já adquiriu o WebLivro? Acesse-o com a senha enviada em seu email.";
-    btnsEl.appendChild(info);
+if (tipo === "weblivro") {
+  const { accessCode, accessUrl } = detalhes || {};
 
-    const blocoAcesso = document.createElement("div");
-    blocoAcesso.className = "flex gap-2 items-center w-full";
-    blocoAcesso.innerHTML = `
-      <label class="sr-only" for="inputChaveAcesso">Chave de Acesso</label>
-      <input id="inputChaveAcesso" type="text" placeholder="Chave de Acesso"
-             class="flex-1 px-4 py-2 rounded-full border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-400"
-             autocomplete="off">
-      <button id="btnAcessarWebLivro"
-              class="bg-blue-600 text-white px-6 py-2 rounded-full hover:bg-blue-700 transition-all">
-        Acessar
-      </button>
-    `;
-    btnsEl.appendChild(blocoAcesso);
+  const info = document.createElement("p");
+  info.className = "text-sm text-gray-600";
+  info.textContent = "Já adquiriu o WebLivro? Acesse-o com a senha enviada em seu email.";
+  btnsEl.appendChild(info);
 
-    // listeners
-    const chaveInput = blocoAcesso.querySelector('#inputChaveAcesso');
-    const btnAcessar = blocoAcesso.querySelector('#btnAcessarWebLivro');
+  const blocoAcesso = document.createElement("div");
+  blocoAcesso.className = "flex gap-2 items-center w-full";
+  blocoAcesso.innerHTML = `
+    <label class="sr-only" for="inputChaveAcesso">Chave de Acesso</label>
+    <input id="inputChaveAcesso" type="text" placeholder="Chave de Acesso"
+           class="flex-1 px-4 py-2 rounded-full border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-400"
+           autocomplete="off">
+    <button id="btnAcessarWebLivro"
+            class="bg-blue-600 text-white px-6 py-2 rounded-full hover:bg-blue-700 transition-all">
+      Acessar
+    </button>
+  `;
+  btnsEl.appendChild(blocoAcesso);
 
-    function tentarAcesso() {
-      const chave = (chaveInput.value || "").trim();
-      if (chave === "ID10-W7BK-EMHW") {
-        window.location.href = "IdWWebLivro.html";
-      } else {
-        alert("A senha de acesso está errada.");
-      }
+  const chaveInput = blocoAcesso.querySelector('#inputChaveAcesso');
+  const btnAcessar = blocoAcesso.querySelector('#btnAcessarWebLivro');
+
+  function tentarAcesso() {
+    const chave = (chaveInput.value || "").trim();
+    if (!accessCode || !accessUrl) {
+      alert("Este WebLivro ainda não está configurado para acesso.");
+      return;
     }
-    btnAcessar.addEventListener("click", tentarAcesso);
-    chaveInput.addEventListener("keydown", (e) => { if (e.key === "Enter") tentarAcesso(); });
+    if (chave === accessCode) {
+      window.location.href = accessUrl;
+    } else {
+      alert("A senha de acesso está errada.");
+    }
   }
+  btnAcessar.addEventListener("click", tentarAcesso);
+  chaveInput.addEventListener("keydown", (e) => { if (e.key === "Enter") tentarAcesso(); });
+}
 
   // ===== Botão ADICIONAR À SACOLA (vem DEPOIS) =====
   if (typeof preco === "number") {
