--- a/index.html
+++ b/index.html
@@ -321,7 +321,8 @@
           youtube: null,
           tipo: 'weblivro',
           accessCode: 'ID10-W7BK-EMHW',
-          accessUrl: 'WebLivroIdW.html'
+          accessUrl: 'WebLivroIdW.html?from=index'
+
         })"
         class="w-full bg-purple-600 text-white py-2 rounded-full hover:bg-purple-700 transition mt-4">
         Ver Detalhes
