--- a/pagamento.html
+++ b/pagamento.html
@@ -78,7 +78,7 @@
     <div class="mb-6">
       <label class="block mb-1 font-semibold text-gray-800">🔑 Chave Pix:</label>
       <div class="flex flex-col sm:flex-row">
-        <input id="chave" type="text" readonly value="pix@seudominio.com" class="flex-grow p-3 border rounded-t-lg sm:rounded-l-lg sm:rounded-tr-none bg-green-100 text-green-800 font-mono" />
+        <input id="chave" type="text" readonly value="pedrofalcari@gmail.com" class="flex-grow p-3 border rounded-t-lg sm:rounded-l-lg sm:rounded-tr-none bg-green-100 text-green-800 font-mono" />
         <button onclick="copiarPix()" class="bg-green-600 text-white px-5 py-3 rounded-b-lg sm:rounded-r-lg sm:rounded-bl-none hover:bg-green-700 transition">📋 Copiar</button>
       </div>
     </div>
