refactor(front): reestrutura layout e componentes para melhor usabilidade e responsividade

--- a/ContoPreVendaDiariodeKaity.html
+++ b/ContoPreVendaDiariodeKaity.html
@@ -437,7 +437,7 @@ Tudo vai ficar bem. Agora, eu tenho amigos. Eu tenho alguém ao meu lado.</p>
 <!-- ===== Gate de acesso (blur + modal), com bypass via ?from=index ===== -->
 <script>
 (function(){
-  const ACCESS_CODE = 'LC01-DK01-AS00'; // << troque aqui
+  const ACCESS_CODE = 'LC01-DK01-ASKT'; // << troque aqui
 
   document.addEventListener('DOMContentLoaded', () => {
     // BYPASS opcional: se vier do index com ?from=index, não pede senha
