--- a/index.html
+++ b/index.html
@@ -162,134 +162,106 @@
   <div id="overlayEstante" onclick="toggleEstante()" class="hidden fixed inset-0 bg-black/30 z-40 cursor-pointer"></div>
 
   <!-- Barra de Navegação Topo -->
-<nav class="bg-purple-700 text-white py-5 px-4 sm:px-5 shadow-md sticky top-0 z-50">
-  <div class="relative w-full flex items-center">
-    <!-- ESQUERDA: Logo + tema + Instagram -->
-    <div class="flex items-center gap-4">
-      <img src="imagens/LogoSite.png" alt="Logo - Estante de Histórias" class="h-20 w-auto select-none" />
-      <div class="flex items-center gap-2">
-        <button id="temaClaro" class="theme-dot" title="Tema claro" aria-label="Tema claro"></button>
-        <button id="temaEscuro" class="theme-dot" title="Tema escuro" aria-label="Tema escuro"></button>
-      </div>
-      <!-- Ícone Instagram -->
-      <a href="https://instagram.com/pedrohfalcaro" target="_blank" rel="noopener noreferrer" title="Instagram" aria-label="Instagram">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 hover:opacity-80 transition" fill="white" viewBox="0 0 24 24">
-          <path d="M7.75 2h8.5A5.75 5.75 0 0 1 22 7.75v8.5A5.75 5.75 0 0 1 16.25 22h-8.5A5.75 5.75 0 0 1 2 16.25v-8.5A5.75 5.75 0 0 1 7.75 2zm0 1.5A4.25 4.25 0 0 0 3.5 7.75v8.5A4.25 4.25 0 0 0 7.75 20.5h8.5a4.25 4.25 0 0 0 4.25-4.25v-8.5A4.25 4.25 0 0 0 16.25 3.5h-8.5zm8.75 2a1 1 0 1 1 0 2 1 1 0 0 1 0-2zM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10zm0 1.5a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7z"/>
-        </svg>
-      </a>
-    </div>
+<nav class="bg-purple-700 text-white py-4 px-4 sm:px-5 shadow-md sticky top-0 z-50">
+  <div class="flex flex-col md:flex-row md:items-center md:justify-between w-full">
 
-
-      <!-- CENTRO: Título -->
-      <div class="absolute left-1/2 -translate-x-1/2">
-        <h1 class="font-extrabold tracking-tight text-white text-xl sm:text-2xl md:text-3xl select-none">
-          Estante de Histórias
-        </h1>
+    <!-- Linha superior (logo + temas + insta + sacola/menu mobile) -->
+    <div class="flex items-center justify-between w-full">
+      <div class="flex items-center gap-3">
+        <!-- Logo -->
+        <img src="imagens/LogoSite.png" alt="Logo - Estante de Histórias" class="h-14 w-auto select-none" />
+        <!-- Temas -->
+        <div class="flex items-center gap-2">
+          <button id="temaClaro" class="theme-dot" title="Tema claro" aria-label="Tema claro"></button>
+          <button id="temaEscuro" class="theme-dot" title="Tema escuro" aria-label="Tema escuro"></button>
+        </div>
+        <!-- Instagram -->
+        <a href="https://instagram.com/pedrohfalcaro" target="_blank" rel="noopener noreferrer" title="Instagram" aria-label="Instagram">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 hover:opacity-80 transition" fill="white" viewBox="0 0 24 24">
+            <path d="M7.75 2h8.5A5.75 5.75 0 0 1 22 7.75v8.5A5.75 5.75 0 0 1 16.25 22h-8.5A5.75 5.75 0 0 1 2 16.25v-8.5A5.75 5.75 0 0 1 7.75 2zm0 1.5A4.25 4.25 0 0 0 3.5 7.75v8.5A4.25 4.25 0 0 0 7.75 20.5h8.5a4.25 4.25 0 0 0 4.25-4.25v-8.5A4.25 4.25 0 0 0 16.25 3.5h-8.5zm8.75 2a1 1 0 1 1 0 2 1 1 0 0 1 0-2zM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10zm0 1.5a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7z"/>
+          </svg>
+        </a>
       </div>
 
-<!-- DIREITA (desktop): Navegação com ícones significativos + tooltip -->
-<div class="ml-auto items-center gap-5 hidden md:flex">
-  <!-- Modelo de botão com tooltip -->
-  <div class="relative group">
-    <button
-      onclick="scrollToSection('obrasProjetos')"
-      class="p-3 rounded-full bg-white/15 hover:bg-white/25 backdrop-blur-sm border border-white/20 transition"
-      aria-label="Obras & Projetos">
-      <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-white" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
-        <rect x="3.75" y="4.5" width="4.5" height="4.5" rx="1"></rect>
-        <rect x="15.75" y="4.5" width="4.5" height="4.5" rx="1"></rect>
-        <rect x="15.75" y="16.5" width="4.5" height="4.5" rx="1"></rect>
-        <rect x="3.75" y="16.5" width="4.5" height="4.5" rx="1"></rect>
-      </svg>
-    </button>
-    <span class="absolute bottom-[-2rem] left-1/2 -translate-x-1/2 text-xs bg-black/80 text-white px-2 py-1 rounded opacity-0 group-hover:opacity-100 transition">
-      Obras & Projetos
-    </span>
-  </div>
-
-  <!-- Sobre o Autor -->
-  <div class="relative group">
-    <button
-      onclick="scrollToSection('sobreAutor')"
-      class="p-3 rounded-full bg-white/15 hover:bg-white/25 backdrop-blur-sm border border-white/20 transition"
-      aria-label="Sobre o Autor">
-      <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-white" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
-        <path d="M12 14.5c-3.59 0-6.5 2.16-6.5 4.5v.5h13v-.5c0-2.34-2.91-4.5-6.5-4.5z"/>
-        <circle cx="12" cy="8" r="3.5"/>
-      </svg>
-    </button>
-    <span class="absolute bottom-[-2rem] left-1/2 -translate-x-1/2 text-xs bg-black/80 text-white px-2 py-1 rounded opacity-0 group-hover:opacity-100 transition">
-      Sobre o Autor
-    </span>
-  </div>
-
-  <!-- Linha do Tempo -->
-  <div class="relative group">
-    <button
-      onclick="scrollToSection('linhaTempo')"
-      class="p-3 rounded-full bg-white/15 hover:bg-white/25 backdrop-blur-sm border border-white/20 transition"
-      aria-label="Linha do Tempo">
-      <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-white" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
-        <circle cx="12" cy="12" r="9"/>
-        <path d="M12 7v5l3 3"/>
-      </svg>
-    </button>
-    <span class="absolute bottom-[-2rem] left-1/2 -translate-x-1/2 text-xs bg-black/80 text-white px-2 py-1 rounded opacity-0 group-hover:opacity-100 transition">
-      Linha do Tempo
-    </span>
-  </div>
-
-  <!-- Contos -->
-  <div class="relative group">
-    <button
-      onclick="document.getElementById('contos').scrollIntoView({ behavior: 'smooth' })"
-      class="p-3 rounded-full bg-white/15 hover:bg-white/25 backdrop-blur-sm border border-white/20 transition"
-      aria-label="Contos">
-      <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-white" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
-        <path d="M12 6.75c-2.25-1.5-6-1.5-8.25 0v10.5c2.25-1.5 6-1.5 8.25 0 2.25-1.5 6-1.5 8.25 0V6.75c-2.25-1.5-6-1.5-8.25 0z"/>
-      </svg>
-    </button>
-    <span class="absolute bottom-[-2rem] left-1/2 -translate-x-1/2 text-xs bg-black/80 text-white px-2 py-1 rounded opacity-0 group-hover:opacity-100 transition">
-      Contos
-    </span>
-  </div>
-
-  <!-- Sacola -->
-  <div class="relative group">
-    <button
-      onclick="toggleEstante()"
-      class="p-3 rounded-full bg-sky-400 hover:bg-sky-500 text-white border border-white/20 shadow-md transition"
-      aria-label="Sacola">
-      <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
-        <path d="M16 11V8a4 4 0 0 0-8 0v3"/>
-        <path d="M5 11h14l1 9H4l1-9z"/>
-      </svg>
-    </button>
-    <span class="absolute bottom-[-2rem] left-1/2 -translate-x-1/2 text-xs bg-black/80 text-white px-2 py-1 rounded opacity-0 group-hover:opacity-100 transition">
-      Sacola
-    </span>
-  </div>
-</div>
-
-      <!-- DIREITA (mobile): Botões mínimos -->
-      <div class="ml-auto flex md:hidden items-center gap-2">
-        <button
-          onclick="toggleEstante()"
-          class="px-3 py-1 rounded-full bg-white/15 hover:bg-white/25 border border-white/20 text-sm"
-        >
+      <!-- Sacola/Menu no mobile -->
+      <div class="flex items-center gap-2 md:hidden">
+        <button onclick="toggleEstante()" class="px-3 py-1 rounded-full bg-white/15 hover:bg-white/25 border border-white/20 text-sm">
           Sacola
         </button>
-        <button
-          id="btnMenu"
-          class="p-2 rounded-lg bg-white/15 hover:bg-white/25 border border-white/20"
-          aria-label="Abrir menu"
-          onclick="toggleMenu()"
-        >
+        <button id="btnMenu" class="p-2 rounded-lg bg-white/15 hover:bg-white/25 border border-white/20" aria-label="Abrir menu" onclick="toggleMenu()">
           ☰
         </button>
       </div>
     </div>
-  </nav>
+
+    <!-- Título (centralizado embaixo no mobile, absoluto no desktop) -->
+    <div class="mt-2 md:mt-0 text-center md:absolute md:left-1/2 md:-translate-x-1/2">
+      <h1 class="font-extrabold tracking-tight text-white text-xl sm:text-2xl md:text-3xl select-none">
+        Estante de Histórias
+      </h1>
+    </div>
+
+    <!-- Navegação (desktop) -->
+    <div class="hidden md:flex items-center gap-5 ml-auto">
+      <!-- Obras -->
+      <div class="relative group">
+        <button onclick="scrollToSection('obrasProjetos')" class="p-3 rounded-full bg-white/15 hover:bg-white/25 border border-white/20 transition" aria-label="Obras & Projetos">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-white" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8">
+            <rect x="3.75" y="4.5" width="4.5" height="4.5" rx="1"></rect>
+            <rect x="15.75" y="4.5" width="4.5" height="4.5" rx="1"></rect>
+            <rect x="15.75" y="16.5" width="4.5" height="4.5" rx="1"></rect>
+            <rect x="3.75" y="16.5" width="4.5" height="4.5" rx="1"></rect>
+          </svg>
+        </button>
+        <span class="absolute bottom-[-2rem] left-1/2 -translate-x-1/2 text-xs bg-black/80 text-white px-2 py-1 rounded opacity-0 group-hover:opacity-100 transition">Obras & Projetos</span>
+      </div>
+
+      <!-- Sobre o Autor -->
+      <div class="relative group">
+        <button onclick="scrollToSection('sobreAutor')" class="p-3 rounded-full bg-white/15 hover:bg-white/25 border border-white/20 transition" aria-label="Sobre o Autor">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.8">
+            <path d="M12 14.5c-3.59 0-6.5 2.16-6.5 4.5v.5h13v-.5c0-2.34-2.91-4.5-6.5-4.5z"/>
+            <circle cx="12" cy="8" r="3.5"/>
+          </svg>
+        </button>
+        <span class="absolute bottom-[-2rem] left-1/2 -translate-x-1/2 text-xs bg-black/80 text-white px-2 py-1 rounded opacity-0 group-hover:opacity-100 transition">Sobre o Autor</span>
+      </div>
+
+      <!-- Linha do Tempo -->
+      <div class="relative group">
+        <button onclick="scrollToSection('linhaTempo')" class="p-3 rounded-full bg-white/15 hover:bg-white/25 border border-white/20 transition" aria-label="Linha do Tempo">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.8">
+            <circle cx="12" cy="12" r="9"/>
+            <path d="M12 7v5l3 3"/>
+          </svg>
+        </button>
+        <span class="absolute bottom-[-2rem] left-1/2 -translate-x-1/2 text-xs bg-black/80 text-white px-2 py-1 rounded opacity-0 group-hover:opacity-100 transition">Linha do Tempo</span>
+      </div>
+
+      <!-- Contos -->
+      <div class="relative group">
+        <button onclick="document.getElementById('contos').scrollIntoView({ behavior: 'smooth' })" class="p-3 rounded-full bg-white/15 hover:bg-white/25 border border-white/20 transition" aria-label="Contos">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.8">
+            <path d="M12 6.75c-2.25-1.5-6-1.5-8.25 0v10.5c2.25-1.5 6-1.5 8.25 0 2.25-1.5 6-1.5 8.25 0V6.75c-2.25-1.5-6-1.5-8.25 0z"/>
+          </svg>
+        </button>
+        <span class="absolute bottom-[-2rem] left-1/2 -translate-x-1/2 text-xs bg-black/80 text-white px-2 py-1 rounded opacity-0 group-hover:opacity-100 transition">Contos</span>
+      </div>
+
+      <!-- Sacola -->
+      <div class="relative group">
+        <button onclick="toggleEstante()" class="p-3 rounded-full bg-sky-400 hover:bg-sky-500 text-white border border-white/20 shadow-md transition" aria-label="Sacola">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.8">
+            <path d="M16 11V8a4 4 0 0 0-8 0v3"/>
+            <path d="M5 11h14l1 9H4l1-9z"/>
+          </svg>
+        </button>
+        <span class="absolute bottom-[-2rem] left-1/2 -translate-x-1/2 text-xs bg-black/80 text-white px-2 py-1 rounded opacity-0 group-hover:opacity-100 transition">Sacola</span>
+      </div>
+    </div>
+  </div>
+</nav>
+
 
   <!-- Hero -->
 <section class="bg-gradient-to-br from-purple-700 to-indigo-700 text-white py-8 sm:py-10 px-4 md:px-8">
