--- a/pagamento.html
+++ b/pagamento.html
@@ -99,83 +99,87 @@
   </div>
 
   <script>
-    function copiarPix() {
-      const chave = document.getElementById("chave");
-      chave.select();
-      document.execCommand("copy");
-      alert("Chave Pix copiada!");
-    }
-
-    async function enviarPagamento() {
-  const nome = document.getElementById("nome").value;
-  const email = document.getElementById("email").value;
-  const rua = document.getElementById("rua").value;
-  const numero = document.getElementById("numero").value;
-  const bairro = document.getElementById("bairro").value;
-  const cidade = document.getElementById("cidade").value;
-  const estado = document.getElementById("estado").value;
-  const cep = document.getElementById("cep").value;
-  const comprovante = document.querySelector('input[type="file"]').files[0];
-
-  if (!nome || !email || !comprovante) {
-    alert("Preencha nome, email e selecione o comprovante.");
-    return;
+  function copiarPix() {
+    const chave = document.getElementById("chave");
+    chave.select();
+    chave.setSelectionRange(0, 99999); // suporte mobile
+    navigator.clipboard.writeText(chave.value)
+      .then(() => alert("📋 Chave Pix copiada com sucesso!"))
+      .catch(() => alert("⚠️ Não foi possível copiar a chave Pix."));
   }
 
-  const estante = JSON.parse(localStorage.getItem("estante")) || [];
-  let resumo = "";
-  let total = 0;
+  async function enviarPagamento() {
+    const nome = document.getElementById("nome").value;
+    const email = document.getElementById("email").value;
+    const rua = document.getElementById("rua").value;
+    const numero = document.getElementById("numero").value;
+    const bairro = document.getElementById("bairro").value;
+    const cidade = document.getElementById("cidade").value;
+    const estado = document.getElementById("estado").value;
+    const cep = document.getElementById("cep").value;
+    const comprovante = document.querySelector('input[type="file"]').files[0];
 
-  estante.forEach(l => {
-    resumo += `• ${l.nome} - ${l.quantidade}x - R$ ${(l.preco * l.quantidade).toFixed(2)}\n`;
-    total += l.preco * l.quantidade;
-  });
+    if (!nome || !email || !comprovante) {
+      alert("⚠️ Preencha nome, e-mail e selecione o comprovante.");
+      return;
+    }
 
-  resumo += `\nTOTAL: R$ ${total.toFixed(2)}`;
+    const estante = JSON.parse(localStorage.getItem("estante")) || [];
+    let resumo = "";
+    let total = 0;
 
-  const formData = new FormData();
-  formData.append("nome", nome);
-  formData.append("email", email);
-  formData.append("rua", rua);
-  formData.append("numero", numero);
-  formData.append("bairro", bairro);
-  formData.append("cidade", cidade);
-  formData.append("estado", estado);
-  formData.append("cep", cep);
-  formData.append("resumo", resumo);
-  formData.append("comprovante", comprovante);
-
-  // Mostra mensagem de aguarde
-  const aguarde = document.getElementById("mensagemAguarde");
-  aguarde.classList.remove("hidden");
-
-  try {
-    const response = await fetch("https://site-livro-backend.onrender.com/enviar-pagamento", {
-      method: "POST",
-      body: formData
+    estante.forEach(l => {
+      resumo += `• ${l.nome} - ${l.quantidade}x - R$ ${(l.preco * l.quantidade).toFixed(2)}\n`;
+      total += l.preco * l.quantidade;
     });
 
-    const resultado = await response.json();
+    resumo += `\nTOTAL: R$ ${total.toFixed(2)}`;
 
-    if (response.ok && resultado.sucesso) {
-      document.getElementById("alertaSucesso").classList.remove("hidden");
-      document.getElementById("mensagemSucesso").classList.remove("hidden");
-      localStorage.removeItem("estante");
-      setTimeout(() => window.location.href = "index.html", 5000);
-    } else {
-      alert("Erro ao enviar. Tente novamente.");
+    const formData = new FormData();
+    formData.append("nome", nome);
+    formData.append("email", email);
+    formData.append("rua", rua);
+    formData.append("numero", numero);
+    formData.append("bairro", bairro);
+    formData.append("cidade", cidade);
+    formData.append("estado", estado);
+    formData.append("cep", cep);
+    formData.append("resumo", resumo);
+    formData.append("comprovante", comprovante);
+
+    // Mostra mensagem de aguarde
+    const aguarde = document.getElementById("mensagemAguarde");
+    aguarde.classList.remove("hidden");
+
+    try {
+      const response = await fetch("https://site-livro-backend.onrender.com/enviar-pagamento", {
+        method: "POST",
+        body: formData
+      });
+
+      let resultado = {};
+      try {
+        resultado = await response.json();
+      } catch (e) {
+        console.warn("Resposta não veio em JSON:", e);
+      }
+
+      if (response.ok && resultado.sucesso) {
+        document.getElementById("alertaSucesso").classList.remove("hidden");
+        document.getElementById("mensagemSucesso").classList.remove("hidden");
+        localStorage.removeItem("estante");
+        setTimeout(() => window.location.href = "index.html", 5000);
+      } else {
+        alert("❌ Não conseguimos processar seu pedido agora. Tente novamente em alguns minutos.");
+      }
+    } catch (error) {
+      console.error("Erro no envio:", error);
+      alert("⚠️ Ocorreu um erro de conexão. Verifique sua internet ou tente mais tarde.");
+    } finally {
+      // Oculta mensagem de aguarde
+      aguarde.classList.add("hidden");
     }
-  } catch (error) {
-    console.error(error);
-   alert("✨ Tudo certo! Agora é só conferir seu e-mail (até a pasta de spam). Se não encontrar nada em alguns minutinhos, é só chamar a gente!");
-
-  } finally {
-    // Oculta mensagem de aguarde
-    aguarde.classList.add("hidden");
   }
-}
-
-
     // Resumo na tela
     const resumo = document.getElementById("resumo");
     const estante = JSON.parse(localStorage.getItem("estante")) || [];
