feat(livro): atualiza status de A Lenda do Caos para publicado (fim da pré-venda)

--- a/index.html
+++ b/index.html
@@ -359,10 +359,10 @@
 <section class="bg-gradient-to-br from-purple-700 to-indigo-700 text-white py-8 sm:py-10 px-4 md:px-8">
   <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-2 items-center gap-8">
     <div class="animate-fade text-center md:text-left order-2 md:order-1">
-      <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-2">Pré-venda Exclusiva (Até 30/09/2025)</h2>
-      <p class="text-sm sm:text-base md:text-lg mb-4">"A Lenda do Caos - Tríplice Caótica" já está disponível! Comprando na pré-venda você recebe um marca-páginas e um conto exclusivo dentro do universo do livro!</p>
+      <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-2">Último Lançamento</h2>
+      <p class="text-sm sm:text-base md:text-lg mb-4">"A Lenda do Caos - Tríplice Caótica" já disponível!</p>
       <button 
-        onclick="adicionarLivro('A Lenda do Caos - Tríplice Caótica', 52.9, 'imagens/LdC1.png')" 
+        onclick="adicionarLivro('A Lenda do Caos - Tríplice Caótica', 57.9, 'imagens/LdC1.png')" 
         class="bg-white text-purple-700 px-5 py-2 rounded-full font-semibold hover:bg-gray-100 transition-all shadow-md">
          Adicionar à Sacola
       </button>
@@ -403,17 +403,20 @@
           <div class="bg-white rounded-3xl shadow-lg flex flex-col p-5 h-full hover:shadow-xl transition-all group relative">
             <div class="absolute top-3 left-3 z-10 bg-green-100 text-green-700 px-3 py-1 text-xs font-bold rounded-full shadow-sm">📖 Livro</div>
             <img src="imagens/LdC1.png" class="w-full aspect-[2/3] object-cover rounded-2xl mb-4 transform group-hover:scale-105 transition-all" alt="A Lenda do Caos capa"/>
-            <h3 class="text-lg sm:text-xl font-bold text-center mb-1">A Lenda do Caos - Tríplice Caótica + Marca-páginas + Conto exclusivo</h3>
-            <p class="text-base sm:text-lg mt-2 text-center">
-              <del class="text-red-500 text-base mr-2">R$ 57,90</del>
+            <h3 class="text-lg sm:text-xl font-bold text-center mb-1">A Lenda do Caos - Tríplice Caótica </h3>
+            <!-- <p class="text-base sm:text-lg mt-2 text-center">
+               <del class="text-red-500 text-base mr-2">R$ 57,90</del>
               <strong class="text-green-600 text-xl font-bold">R$ 52,90</strong>
+            </p> -->
+            <p class="text-base mt-2 text-center text-gray-800">
+              <strong class="text-indigo-600 text-xl font-bold">R$ 57,90</strong>
             </p>
             <div class="mt-auto pt-4">
               <button 
                 onclick="abrirDetalhes({
                   nome: 'A Lenda do Caos - Tríplice Caótica + Marca-páginas + Conto exclusivo',
                   descricao: 'E se cada história que já foi contada existisse de verdade, em um universo próprio, moldado pela mente de quem a criou? Arthur, um garoto comum de 14 anos, sempre acreditou que histórias eram apenas... histórias. Mas tudo muda quando uma simples narrativa contada pelo seu pai se transforma em algo maior — muito maior. Ele começa a ver coisas que ninguém mais vê. Ouvir vozes que ninguém mais ouve. Sentir um chamado vindo de um lugar que ele nem sabia existir. O que Arthur não sabe é que sua mente se conectou a uma porta — uma ligação entre mundos. Uma passagem entre a realidade que vivemos e outra, nascida do caos primordial: a realidade da história que escutou. Arthur se vê no centro de uma guerra entre mundos, onde criação e destruição são apenas duas faces da mesma força: o Caos.',
-                  preco: 52.9,
+                  preco: 57.9,
                   imagem: 'imagens/LdC1.png',
                   youtube: null,
                   tipo: 'livro',
