--- a/index.html
+++ b/index.html
@@ -481,59 +481,73 @@
     </div>
   </section>
 
-  <!-- Contos  -->
-  <section id="contos" class="py-10 scroll-mt-24">
-    <div class="max-w-7xl mx-auto px-4">
-      <h2 class="text-2xl sm:text-3xl font-bold text-purple-700 dark:text-purple-300 mb-6">Contos</h2>
+ <div class="relative">
+  <button id="prevContos" class="carousel-btn carousel-btn-left hidden sm:block" aria-label="Anterior">&lt;</button>
 
-      <div class="relative">
-        <button id="prevContos" class="carousel-btn carousel-btn-left hidden sm:block" aria-label="Anterior">&lt;</button>
+  <div id="contosContainer" 
+       class="flex overflow-x-auto no-scrollbar scroll-smooth mx-auto max-w-5xl gap-6 px-2">
 
-        <div id="contosContainer" class="flex overflow-x-auto no-scrollbar scroll-smooth">
-          <!-- Meu Universo -->
-          <div class="obra bg-white dark:bg-gray-800 rounded-3xl shadow-md overflow-hidden">
-            <img src="imagens/ContoMUcapa.png" alt="Capa conto" class="w-full aspect-[16/9] object-cover">
-            <div class="p-4">
-              <h3 class="font-bold text-base sm:text-lg text-gray-800 dark:text-white">Meu Universo</h3>
-              <p class="text-gray-600 dark:text-gray-300 text-sm mt-1">Um conto ambientado entre estrelas, silêncio e decisões que mudam rotas.</p>
-              <a href="ContosMeuUniverso.html" 
-                 class="mt-3 block w-full bg-purple-600 hover:bg-purple-700 text-white py-2 px-4 rounded-lg text-center transition">
-                 Ler conto
-              </a>
-            </div>
-          </div>
-
-          <!-- Jardineiro do Inferno -->
-          <div class="obra bg-white dark:bg-gray-800 rounded-3xl shadow-md overflow-hidden">
-            <img src="imagens/ContoJdIcapa.png" alt="Capa conto" class="w-full aspect-[16/9] object-cover">
-            <div class="p-4">
-              <h3 class="font-bold text-base sm:text-lg text-gray-800 dark:text-white">Jardineiro do Inferno</h3>
-              <p class="text-gray-600 dark:text-gray-300 text-sm mt-1">Um conto sobre suspense e horror de uma vida miserável.</p>
-              <a href="ContosJdI.html" 
-                 class="mt-3 block w-full bg-purple-600 hover:bg-purple-700 text-white py-2 px-4 rounded-lg text-center transition">
-                 Ler conto
-              </a>
-            </div>
-          </div>
-
-          <!-- Meus Monstros -->
-          <div class="obra bg-white dark:bg-gray-800 rounded-3xl shadow-md overflow-hidden">
-            <img src="imagens/ContosMM.jpg" alt="Capa conto" class="w-full aspect-[16/9] object-cover">
-            <div class="p-4">
-              <h3 class="font-bold text-base sm:text-lg text-gray-800 dark:text-white">Meus Monstros</h3>
-              <p class="text-gray-600 dark:text-gray-300 text-sm mt-1">Um conto sobre insegurança e dores carregadas pela vida.</p>
-              <a href="ContosMM.html" 
-                 class="mt-3 block w-full bg-purple-600 hover:bg-purple-700 text-white py-2 px-4 rounded-lg text-center transition">
-                 Ler conto
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <button id="nextContos" class="carousel-btn carousel-btn-right hidden sm:block" aria-label="Próximo">&gt;</button>
+    <!-- Meu Universo -->
+    <div class="obra bg-white dark:bg-gray-800 rounded-3xl shadow-md overflow-hidden">
+      <img src="imagens/ContoMUcapa.png" alt="Capa conto" class="w-full aspect-[16/9] object-cover">
+      <div class="p-4">
+        <h3 class="font-bold text-base sm:text-lg text-gray-800 dark:text-white">Meu Universo</h3>
+        <p class="text-gray-600 dark:text-gray-300 text-sm mt-1">Um conto ambientado entre estrelas, silêncio e decisões que mudam rotas.</p>
+        <a href="ContosMeuUniverso.html" 
+           class="mt-3 block w-full bg-purple-600 hover:bg-purple-700 text-white py-2 px-4 rounded-lg text-center transition">
+           Ler conto
+        </a>
       </div>
     </div>
-  </section>
+
+    <!-- A voz do vazio -->
+    <div class="obra bg-white dark:bg-gray-800 rounded-3xl shadow-md overflow-hidden">
+      <img src="imagens/ContoVdVcapa.png" alt="Capa conto A voz do vazio" class="w-full aspect-[16/9] object-cover">
+      <div class="p-4">
+        <h3 class="font-bold text-base sm:text-lg text-gray-800 dark:text-white">A voz do vazio</h3>
+        <p class="text-gray-600 dark:text-gray-300 text-sm mt-1">
+          Um conto sobre o luto e a esperança, contado através de reinos que caem e ascendem do vazio.
+        </p>
+        <a href="ContosVdV.html" 
+           class="mt-3 block w-full bg-purple-600 hover:bg-purple-700 text-white py-2 px-4 rounded-lg text-center transition">
+           Ler conto
+        </a>
+      </div>
+    </div>
+    
+
+    <!-- Meus Monstros -->
+    <div class="obra bg-white dark:bg-gray-800 rounded-3xl shadow-md overflow-hidden">
+      <img src="imagens/ContosMM.jpg" alt="Capa conto" class="w-full aspect-[16/9] object-cover">
+      <div class="p-4">
+        <h3 class="font-bold text-base sm:text-lg text-gray-800 dark:text-white">Meus Monstros</h3>
+        <p class="text-gray-600 dark:text-gray-300 text-sm mt-1">Um conto sobre insegurança e dores carregadas pela vida.</p>
+        <a href="ContosMM.html" 
+           class="mt-3 block w-full bg-purple-600 hover:bg-purple-700 text-white py-2 px-4 rounded-lg text-center transition">
+           Ler conto
+        </a>
+      </div>
+    </div>
+
+    <!-- Jardineiro do Inferno -->
+    <div class="obra bg-white dark:bg-gray-800 rounded-3xl shadow-md overflow-hidden">
+      <img src="imagens/ContoJdIcapa.png" alt="Capa conto" class="w-full aspect-[16/9] object-cover">
+      <div class="p-4">
+        <h3 class="font-bold text-base sm:text-lg text-gray-800 dark:text-white">Jardineiro do Inferno</h3>
+        <p class="text-gray-600 dark:text-gray-300 text-sm mt-1">Um conto sobre suspense e horror de uma vida miserável.</p>
+        <a href="ContosJdI.html" 
+           class="mt-3 block w-full bg-purple-600 hover:bg-purple-700 text-white py-2 px-4 rounded-lg text-center transition">
+           Ler conto
+        </a>
+      </div>
+    </div>
+
+  </div> <!-- fecha contosContainer -->
+
+  <button id="nextContos" class="carousel-btn carousel-btn-right hidden sm:block" aria-label="Próximo">&gt;</button>
+</div>
+
+
 
   <!-- POPUP DE DETALHES -->
 <div id="popupDetalhes" class="fixed inset-0 bg-black/50 z-50 hidden flex items-center justify-center p-4">
