--- a/index.html
+++ b/index.html
@@ -487,6 +487,20 @@
   <div id="contosContainer" 
        class="flex overflow-x-auto no-scrollbar scroll-smooth mx-auto max-w-5xl gap-6 px-2">
 
+    <!-- O Natal -->
+    <div class="obra bg-white dark:bg-gray-800 rounded-3xl shadow-md overflow-hidden">
+      <img src="imagens/ContoONcapa.png" alt="Capa conto" class="w-full aspect-[16/9] object-cover">
+      <div class="p-4">
+        <h3 class="font-bold text-base sm:text-lg text-gray-800 dark:text-white">O Natal</h3>
+        <p class="text-gray-600 dark:text-gray-300 text-sm mt-1">Um conto sobre o tempo que passa e o que se recusa a mudar, contado através de um Natal que permanece.</p>
+        <a href="ContosON.html" 
+           class="mt-3 block w-full bg-purple-600 hover:bg-purple-700 text-white py-2 px-4 rounded-lg text-center transition">
+           Ler conto
+        </a>
+      </div>
+    </div>
+
+
     <!-- Meu Universo -->
     <div class="obra bg-white dark:bg-gray-800 rounded-3xl shadow-md overflow-hidden">
       <img src="imagens/ContoMUcapa.png" alt="Capa conto" class="w-full aspect-[16/9] object-cover">
