fix: corrigir nome da imagem da capa do conto O Natal

--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
 
     <!-- O Natal -->
     <div class="obra bg-white dark:bg-gray-800 rounded-3xl shadow-md overflow-hidden">
-      <img src="imagens/ContoONcapa.png" alt="Capa conto" class="w-full aspect-[16/9] object-cover">
+      <img src="imagens/ContoONCapa.png" alt="Capa conto" class="w-full aspect-[16/9] object-cover">
       <div class="p-4">
         <h3 class="font-bold text-base sm:text-lg text-gray-800 dark:text-white">O Natal</h3>
         <p class="text-gray-600 dark:text-gray-300 text-sm mt-1">Um conto sobre o tempo que passa e o que se recusa a mudar, contado através de um Natal que permanece.</p>
