--- a/index.html
+++ b/index.html
@@ -141,6 +141,12 @@
     .theme-dot:hover { box-shadow: 0 0 0 2px rgba(255,255,255,.75) inset; }
     body.dark-mode .nav-link::after { background: #e9d5ff; }
     body.dark-mode nav { box-shadow: 0 2px 12px rgba(0,0,0,.35); }
+
+    /* ===== Rodapé (contato) no tema escuro ===== */
+body.dark-mode footer .bg-white { background-color: #0b1220 !important; }
+body.dark-mode footer .border-gray-200 { border-color: #374151 !important; }
+body.dark-mode footer .text-gray-600 { color: #d1d5db !important; }
+
   </style>
 </head>
 
@@ -458,28 +464,49 @@
   </section>
 
   <!-- Linha do Tempo (alvo da navegação) -->
-  <section id="linhaTempo" class="bg-white py-14 sm:py-16 px-4 sm:px-6 scroll-mt-24">
-    <div class="max-w-4xl mx-auto">
-      <h2 class="text-2xl sm:text-3xl font-extrabold text-center text-purple-700 mb-8 sm:mb-10">Linha do Tempo de Histórias</h2>
-      <div class="relative border-l-4 border-purple-600 pl-6 space-y-8 sm:space-y-10">
-        <div class="relative">
-          <div class="absolute -left-4 top-1.5 w-3 h-3 bg-purple-600 rounded-full"></div>
-          <h3 class="text-lg sm:text-xl font-bold text-purple-700">02 de novembro de 2024</h3>
-          <p class="text-gray-700 text-sm sm:text-base">Estreia da áudio-série <strong>Além dos Céus – T1: Desbravadores</strong>.</p>
-        </div>
-        <div class="relative">
-          <div class="absolute -left-4 top-1.5 w-3 h-3 bg-indigo-600 rounded-full"></div>
-          <h3 class="text-lg sm:text-xl font-bold text-indigo-700">01 de outubro de 2025 </h3>
-          <p class="text-gray-700 text-sm sm:text-base">Lançamento do livro <strong>A Lenda do Caos – Tríplice Caótica</strong>.</p>
-        </div>
-        <div class="relative">
-          <div class="absolute -left-4 top-1.5 w-3 h-3 bg-gray-400 rounded-full animate-pulse"></div>
-          <h3 class="text-lg sm:text-xl font-bold text-gray-600">Março de 2026 <span class="italic">(?)</span></h3>
-          <p class="text-gray-600 italic text-sm sm:text-base">Algo novo está vindo...</p>
-        </div>
+<section id="linhaTempo" class="bg-white py-14 sm:py-16 px-4 sm:px-6 scroll-mt-24">
+  <div class="max-w-4xl mx-auto">
+    <h2 class="text-2xl sm:text-3xl font-extrabold text-center text-purple-700 mb-8 sm:mb-10">Linha do Tempo de Histórias</h2>
+    <div class="relative border-l-4 border-purple-600 pl-6 space-y-8 sm:space-y-10">
+
+      <div class="relative">
+        <div class="absolute -left-4 top-1.5 w-3 h-3 bg-purple-600 rounded-full"></div>
+        <h3 class="text-lg sm:text-xl font-bold text-purple-700">02 de novembro de 2024</h3>
+        <p class="text-gray-700 text-sm sm:text-base">
+          Estreia da áudio-série <strong>Além dos Céus – T1: Desbravadores</strong>.
+        </p>
       </div>
+
+      <div class="relative">
+        <div class="absolute -left-4 top-1.5 w-3 h-3 bg-purple-600 rounded-full"></div>
+        <h3 class="text-lg sm:text-xl font-bold text-purple-700">01 de outubro de 2025</h3>
+        <p class="text-gray-700 text-sm sm:text-base">
+          Lançamento do livro <strong>A Lenda do Caos – Tríplice Caótica</strong>.
+        </p>
+      </div>
+
+      <!-- ALTERADO -->
+      <div class="relative">
+        <div class="absolute -left-4 top-1.5 w-3 h-3 bg-indigo-600 rounded-full"></div>
+        <h3 class="text-lg sm:text-xl font-bold text-indigo-700">28 de fevereiro de 2026</h3>
+        <p class="text-gray-700 text-sm sm:text-base">
+          Estreia da áudio-série <strong>Além dos Céus – Spin-off: Echos</strong>.
+        </p>
+      </div>
+
+      <!-- ADICIONADO -->
+      <div class="relative">
+        <div class="absolute -left-4 top-1.5 w-3 h-3 bg-gray-400 rounded-full"></div>
+        <h3 class="text-lg sm:text-xl font-bold text-gray-600">Setembro de 2026</h3>
+        <p class="text-gray-600 italic text-sm sm:text-base">
+          Algo novo está vindo...
+        </p>
+      </div>
+
     </div>
-  </section>
+  </div>
+</section>
+
 
  <div class="relative">
   <button id="prevContos" class="carousel-btn carousel-btn-left hidden sm:block" aria-label="Anterior">&lt;</button>
@@ -938,6 +965,26 @@ if (detalhes.info) {
       window.fecharDetalhes = fecharDetalhes;
     })();
   </script>
+
+  <!-- Faixa de Contato (rodapé) -->
+<footer class="w-full mt-12">
+  <div class="bg-white border-t border-gray-200">
+    <div class="max-w-6xl mx-auto px-4 sm:px-6 py-8 flex flex-col sm:flex-row gap-4 sm:items-center sm:justify-between">
+      <div>
+        <h3 class="text-lg font-extrabold text-purple-700">📬 Contato</h3>
+        <p class="text-sm text-gray-600">Fale comigo por e-mail:</p>
+      </div>
+
+      <a
+        href="mailto:pedrofalcari@gmail.com"
+        class="inline-flex items-center justify-center gap-2 px-5 py-3 rounded-full bg-purple-600 hover:bg-purple-700 text-white font-semibold shadow transition"
+        aria-label="Enviar e-mail para pedrofalcari@gmail.com"
+      >
+        pedrofalcari@gmail.com
+      </a>
+    </div>
+  </div>
+</footer>
 
 </body>
 </html>
